--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ p.texte_titre {
 }
 
 
+
+
+
 img.img_acceuil {
     margin-top: 30px;
     height: 1000px;
@@ -38,10 +41,14 @@ div.position_img_accueil {
 
 
 body {
-    background: linear-gradient(rgba(143, 192, 80, 0.747), rgb(255, 255, 255));
+
     margin: 0;
     font-family: Arial;
     
+}
+
+.linear-gradient {
+    background: linear-gradient(rgba(143, 192, 80, 0.747), rgb(255, 255, 255));
 }
 
 h1 {
