--- a/style.css
+++ b/style.css
@@ -45,3 +45,9 @@ h1 {
     margin-bottom: 0px;
 }
 
+/* RESPONSIVE DESIGN : MOBILE */
+@media only screen and (max-width: 767px) {
+    h1 {
+        text-align: center;
+    }
+}
